@@ -4,6 +4,13 @@
 # License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
+# New string format
+
+CONFIG_DEBUG_MODULES_DESC=If enabled, this setting allows the module positions to be displayed when tp=1 is added to the URL.
+CONFIG_DEBUG_MODULES_LABEL=Debug Modules
+
+# Old string format (need to change to new string format)
+
 ADD SUFFIX TO URLS=Add suffix to URLs
 ADMINISTRATOR ONLY=Administrator Only
 ALLOW USER REGISTRATION=Allow User Registration
