@@ -8,8 +8,15 @@
 # New string format
 #
 
-JYES=Yes
+# Common boolean values
+# Note: YES, NO, TRUE, FALSE are reserved words in INI format.
+JDISABLED=Disabled
+JENABLED=Enabled
+
 JNO=No
+JYES=Yes
+JTRUE=True
+JFALSE=False
 
 JINVALID_TOKEN=The most recent request was denied because it contained an invalid security token. Please refresh the page and try again.
 JERROR_NO_ITEMS_SELECTED=No items selected.
